# Indexes-Scraper

./: .env.example  .gitignore  AGENTS.md  README.md  api.py  config.py  main.py  pyproject.toml  requirements.txt
scrapers/: __init__.py  base_scraper.py  cdi_scraper.py  igpdi_scraper.py  igpm_scraper.py  inccdi_scraper.py  inpc_scraper.py  ipca_scraper.py  ipcfipe_scraper.py  ivar_scraper.py  selic_scraper.py  tr_scraper.py
utils/: __init__.py  logging_config.py  retry.py  validation.py  webdriver_helper.py
