[project]
name = "indexes-scraper"
version = "1.0.0"
description = "Scrapers para coleta automatizada de indices economicos brasileiros do site Debit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "vcode"}]
dependencies = [
    "selenium>=4.43",
    "webdriver-manager>=4.0",
    "beautifulsoup4>=4.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
indexes-scraper = "main:main"

[tool.setuptools]
py-modules = ["main", "config"]

[tool.setuptools.packages.find]
include = ["scrapers*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]